--- a/src/page/attend/layout.css
+++ b/src/page/attend/layout.css
@@ -434,61 +434,67 @@
   padding-top: 8px;
 }
 
-/* 버튼 클릭 안됨-react? */
-/* 버튼 텍스트가 가운데 정렬이 안되는데 텍스트용 버튼 하나 더 만들어야 함 */
-/* .button1 {
-  text-align: center;
-
-  width: 100px;
-  height: 40px;
-  left: calc(50% - 100px / 2);
-  top: calc(50% - 40px / 2);
-  background: #1e4cf4;
-  border-radius: 4px;
-  border: none;
-  margin-bottom: 8px;
-}
-.button1 span {
-  display: inline-block;
-  vertical-align: middle;
-  line-height: 40px;
-}
-.button2 {
-  width: 100px;
-  height: 40px;
-  left: calc(50% - 100px / 2);
-  top: calc(50% - 40px / 2);
-  left: 0%;
-  right: 0%;
-  top: 0%;
-  bottom: 0%;
-  border: none;
-  background: #f9f9f9;
-  border-radius: 4px;
-}
-.button1-text {
+.loading-spinner {
   display: flex;
   justify-content: center;
   align-items: center;
-
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 24px;
-  text-align: center;
-  letter-spacing: 0.1em;
-  color: #ffffff;
-  background: #1e4cf4;
+  height: 100vh;
 }
-.button2-text {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 24px;
-  text-align: center;
-  letter-spacing: 0.1em;
-  color: #000000;
-  background: #ffffff;
-} */
+
+.loading-spinner .ring-loader {
+  display: inline-block;
+}
+
+.loading-spinner .ring-loader span {
+  background-color: 16, 115, 255;
+}
+
+.loading-spinner .ring-loader span:after {
+  background-color: #123abc;
+}
+
+.loading-spinner .ring-loader span:before {
+  background-color: #123abc;
+}
+
+.loading-spinner .ring-loader span:after,
+.loading-spinner .ring-loader span:before {
+  border-color: #123abc transparent transparent transparent;
+}
+
+.loading-spinner .ring-loader span:last-child {
+  animation-delay: -0.2s;
+}
+
+.loading-spinner .ring-loader span:nth-child(1) {
+  top: 50px;
+  left: 50px;
+  animation-delay: -0.6s;
+}
+
+.loading-spinner .ring-loader span:nth-child(2) {
+  top: 54px;
+  left: 36px;
+  animation-delay: -0.4s;
+}
+
+.loading-spinner .ring-loader span:nth-child(3) {
+  top: 62px;
+  left: 20px;
+  animation-delay: -0.2s;
+}
+
+.loading-spinner .ring-loader span:nth-child(4) {
+  top: 74px;
+  left: 8px;
+  animation-delay: 0s;
+}
+
+@keyframes loading-spinner-animation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
